<resources>
    <string name="app_name">PlannerAppAndroid</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="preference_file_key">com.example.plannerappandroid.PREFERENCE_FILE_KEY</string>
    <string name="dashboardWelcome">Welcome,</string>
    <string name="upcomingTasks">Upcoming Tasks</string>
    <string name="userPoints">0</string>
    <string name="dashboardDate">May 16 2020</string>
    <string name="otherPlaceHolderText">:)</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="notifications_header">Notifications</string>
    <string name="delete_header">Delete</string>
    <string name="password_header">Change Password</string>
    <string name="team_header">Teams</string>
    <string name="task_header">Tasks</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
