<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="268dp"
        android:layout_height="201dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="67dp"
        app:srcCompat="@drawable/to_do_list_guy" />

    <EditText
        android:id="@+id/emailTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:hint="@string/email"
        android:drawableLeft="@drawable/ic_user_icon"/>

    <EditText
        android:id="@+id/passwordTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailTextField"
        android:layout_alignStart="@+id/emailTextField"
        android:layout_alignEnd="@+id/emailTextField"
        android:layout_marginStart="2dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="-2dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:hint="@string/password"
        android:drawableLeft="@drawable/ic_lock_icon"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/loginCard"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignBottom="@+id/passwordTextField"
        android:layout_marginStart="-12dp"
        android:layout_marginEnd="-19dp"
        android:layout_marginBottom="-78dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        android:layout_centerInParent="true"
        android:clickable="true"
        android:focusable="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/loginButtonText"
                android:layout_width="99dp"
                android:layout_height="33dp"
                android:layout_centerInParent="true"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>