<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".DashboardActivity">

    <TextView
        android:id="@+id/dashboardDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="132dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="122dp"
        android:layout_marginBottom="591dp"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="40dp"
        tools:text="@string/dashboardDate" />

    <TextView
        android:id="@+id/dashboardWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="226dp"
        android:layout_marginBottom="524dp"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="40dp"
        tools:text="@string/dashboardWelcome" />

    <androidx.cardview.widget.CardView
        android:id="@+id/upcomingCard"
        android:layout_width="366dp"
        android:layout_height="254dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="387dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="18dp"
        app:cardBackgroundColor="@color/colorAccent">

        <TextView
            android:id="@+id/upcomingListTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/upcomingTasks"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/upcomingTaskRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:scrollbars="vertical" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/trendCard"
        android:layout_width="255dp"
        android:layout_height="198dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="139dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="310dp"
        app:cardBackgroundColor="@color/colorAccent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/totalPointsCard"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="153dp"
        android:layout_marginEnd="296dp"
        android:layout_marginBottom="399dp"
        app:cardBackgroundColor="@color/colorAccent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/totalPoints"
                android:layout_width="199dp"
                android:layout_height="112dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="3dp"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="80sp"
                android:textStyle="bold"
                tools:text="@string/userPoints" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/otherPlaceholderCard"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="271dp"
        android:layout_marginEnd="293dp"
        android:layout_marginBottom="281dp"
        app:cardBackgroundColor="@color/colorAccent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/otherPlaceholder"
                android:layout_width="199dp"
                android:layout_height="112dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="3dp"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="80sp"
                android:textStyle="bold"
                tools:text=":)" />
        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>